[gd_scene load_steps=4 format=3 uid="uid://bw8ypmafqlyrs"]

[ext_resource type="Script" path="res://food_list_item.gd" id="1_ggqxg"]
[ext_resource type="FontFile" uid="uid://2no0t7l41urh" path="res://Comic_Neue/ComicNeue-Regular.ttf" id="2_kvoxe"]

[sub_resource type="Theme" id="Theme_vm3i5"]

[node name="Food List Item" type="Node2D"]
script = ExtResource("1_ggqxg")

[node name="DishName" type="Label" parent="."]
offset_right = 1024.0
offset_bottom = 58.0
theme = SubResource("Theme_vm3i5")
theme_override_fonts/font = ExtResource("2_kvoxe")
theme_override_font_sizes/font_size = 50
text = "Placeholder"

[node name="CheckButton" type="Button" parent="."]
offset_left = 1088.0
offset_right = 1152.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 40
text = "✓"

[node name="Xbutton" type="Button" parent="."]
offset_left = 1024.0
offset_right = 1088.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 40
text = "X"

[node name="RerollButton" type="Button" parent="."]
offset_left = 960.0
offset_right = 1024.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 40
text = "⚂"

[connection signal="button_down" from="CheckButton" to="." method="_on_check_button_button_down"]
[connection signal="button_up" from="CheckButton" to="." method="_on_check_button_button_up"]
[connection signal="button_down" from="Xbutton" to="." method="_on_xbutton_button_down"]
[connection signal="button_up" from="Xbutton" to="." method="_on_xbutton_button_up"]
[connection signal="button_down" from="RerollButton" to="." method="_on_reroll_button_button_down"]
[connection signal="button_up" from="RerollButton" to="." method="_on_reroll_button_button_up"]
